RESOLVED FIXED146581
[CSS Grid Layout] Grid item's auto-margins are not applied correctly
https://bugs.webkit.org/show_bug.cgi?id=146581
Summary [CSS Grid Layout] Grid item's auto-margins are not applied correctly
Javier Fernandez
Reported 2015-07-03 02:28:09 PDT
The CSS Grid Layout spec states the following to deal with 'auto' values for the margin properties. http://dev.w3.org/csswg/css-grid/#auto-margins
Attachments
Patch (27.40 KB, patch)
2015-07-03 05:26 PDT, Javier Fernandez
no flags
Patch (27.14 KB, patch)
2015-07-03 11:03 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2015-07-03 05:26:30 PDT
Javier Fernandez
Comment 2 2015-07-03 11:03:54 PDT
WebKit Commit Bot
Comment 3 2015-07-10 10:55:02 PDT
Comment on attachment 256112 [details] Patch Clearing flags on attachment: 256112 Committed r186682: <http://trac.webkit.org/changeset/186682>
WebKit Commit Bot
Comment 4 2015-07-10 10:55:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.